<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="library">Katalog</string>
    <string name="camera">Kamera</string>
    <string name="Modify">Przekształć</string>
    <string name="filter">Filtr</string>
    <string name="rotate">Obróć</string>
    <string name="horizontal">Horyzont</string>
    <string name="vertical">Pion</string>
    <string name="undo">Cofnij</string>
    <string name="save">Zapisz</string>
    <string name="saved">Zapisano!</string>
    <string name="collage">Kolaż</string>
    <string name="gray">Szary</string>
    <string name="light">Jasny</string>
    <string name="adjust">Dostosuj</string>
    <string name="text">Tekst</string>
    <string name="brightness">Jasność</string>
    <string name="sepia">Sepia</string>
    <string name="dark">Ciemny</string>
    <string name="sketch">Szkic</string>
    <string name="negative">Negatyw</string>
    <string name="sticker">Naklejka</string>
    <string name="blue">Niebieski</string>
    <string name="red">Czerwień</string>
    <string name="green">Zieleń</string>
    <string name="draw">Rysuj</string>
    <string name="contrast">Kontrast</string>
    <string name="vignette">Winieta</string>
    <string name="swap">Zamiana</string>
    <string name="binary">Binary</string>
    <string name="binaryBW"><![CDATA[Binary B&W]]></string>
    <string name="yuv">YUV</string>
    <string name="saturation">Nasycenie</string>
    <string name="somethingGoWrong">Coś poszło nie tak!</string>
    <string name="size">Wielkość</string>
    <string name="opacity">Opacity</string>
    <string name="confirm">Potwierdź</string>
    <string name="uploadSuccessful">Wysyłanie zakończone</string>
    <string name="noInternetConnection">Brak internetu</string>
    <string name="RegistrationSuccessful">Utworzono użytkownika</string>
    <string name="RegistrationFailed">Nie udało się utworzyć użytkownika</string>
    <string name="LoginSuccessful">Zalogowano</string>
    <string name="SignOutSuccessful">Wylogowano</string>
    <string name="noLogged">Nie zalogowano</string>
    <string name="SignUp">Rejestracja</string>
    <string name="signIn">Logownie</string>
    <string name="Saved">Zapisano!</string>
    <string name="SendingEmailSucceed">Wysłano maila potwierdzającego</string>
    <string name="SendingEmailFailed">Błąd podczas wysyłania maila</string>
    <string name="blur">rozmazanie</string>
    <string name="myImages">Moje</string>
    <string name="allImages">Wszystkie</string>
</resources>
