<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#1F1C1C"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btPreviousScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#03FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/btUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:text="@string/undo"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/btSave"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="#0E4BF0"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/adjustBrightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <SeekBar
            android:id="@+id/sb_brghtness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8"
            android:backgroundTint="#000000"
            android:max="255"
            android:min="-255"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC" />

        <ImageView
            android:id="@+id/btConfirmBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.05"
            app:srcCompat="@drawable/ok" />
    </LinearLayout>

    <Button
        android:id="@+id/btCompare"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/circle"
        android:clickable="true"
        android:drawableTop="@drawable/compare"
        android:text="" />

    <ImageView
        android:id="@+id/ivEditedPhoto"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:layout_weight="1"
        android:background="#00000000"
        app:srcCompat="@android:color/transparent" />

    <HorizontalScrollView
        android:id="@+id/hsvMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:fillViewport="false"
        android:measureAllChildren="false"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="505dp"
            android:layout_height="64dp"
            android:background="#1F1C1C"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <Button
                android:id="@+id/btCropMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#02FDFDFD"
                android:drawableTop="@drawable/resize"
                android:text="@string/crop"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/filter"
                android:text="@string/filter"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btAdjustMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/adjust"
                android:text="@string/adjust"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/text"
                android:text="@string/text"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/filter"
                android:text="Test"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/filter"
                android:text="Test"
                android:textColor="#F8F7F1F1" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsvCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-64dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="505dp"
            android:layout_height="64dp"
            android:background="#1F1C1C"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <Button
                android:id="@+id/btRotate"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#02FDFDFD"
                android:drawableTop="@drawable/rotate"
                android:text="@string/rotate"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btFlipHorizontal"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/flip_horizontal"
                android:text="@string/horizontal"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btFlipVertical"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/flip_vertical"
                android:text="@string/vertical"
                android:textColor="#F8F7F1F1" />

            <Button
                android:id="@+id/btCrop"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/crop"
                android:text="@string/crop"
                android:textColor="#F8F7F1F1" />


        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsvFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-92dp"
        android:fillViewport="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="505dp"
            android:layout_height="92dp"
            android:background="#00FFFFFF"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <Button
                android:id="@+id/btBright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00090808"
                android:drawableTop="@drawable/bright_filter"
                android:text="@string/light"
                android:textColor="#F8F7F1F1"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00090808"
                android:drawableTop="@drawable/grey_filter"
                android:text="@string/gray"
                android:textColor="#F8F7F1F1"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btSepia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00090808"
                android:drawableTop="@drawable/sepia"
                android:text="@string/sepia"
                android:textColor="#F8F7F1F1"
                android:textSize="12sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsvAdjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-64dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="505dp"
            android:layout_height="64dp"
            android:background="#1F1C1C"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <Button
                android:id="@+id/btBrightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#02FDFDFD"
                android:drawableTop="@drawable/brightness"
                android:text="@string/brightness"
                android:textColor="#F8F7F1F1" />

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>