<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btLocaleChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/en" />

    <ImageButton
        android:id="@+id/btAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#00412929"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="386dp"
        android:layout_height="281dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAuth"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#16383535"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCamera"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/circle"
                android:drawableTop="@drawable/camera"
                android:paddingTop="35dp"
                android:text="@string/camera"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btLibrary"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle"
                android:drawableTop="@drawable/image"
                android:paddingTop="35dp"
                android:text="@string/library"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCollage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/circle"
                android:drawableTop="@drawable/collage"
                android:paddingTop="35dp"
                android:text="@string/collage"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btCloud"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/circle"
                android:drawableTop="@drawable/cloud"
                android:paddingTop="35dp"
                android:text="@string/cloud"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>