<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/your_dialog_root_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#D2000000"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D82B2727"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/red"
            android:textColor="#FC0101"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/green"
            android:textColor="#00C92B"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:text="@string/blue"
            android:textColor="#080BFC"
            android:textSize="18sp"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:text="@string/opacity"
            android:textColor="#080BFC"
            android:textSize="18sp"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <SeekBar
            android:id="@+id/sbRed"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/sbGreen"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/sbRed" />

        <SeekBar
            android:id="@+id/sbOpacity"
            android:layout_width="200dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:max="255"
            android:min="0"
            android:progress="255"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/sbBlue" />

        <SeekBar
            android:id="@+id/sbBlue"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:max="255"
            android:min="0"
            android:progress="255"
            android:progressTint="#F3EDED"
            android:secondaryProgressTint="#FFFFFF"
            android:thumbTint="#FFFFFF"
            android:tickMarkTint="#FDFCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/sbGreen" />

        <ImageView
            android:id="@+id/ivColorPreview"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#780000FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/btConfirmColor"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbBlue"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>